syntax = "proto3";

import "google/protobuf/timestamp.proto";

message schema {
    repeated string list = 1;
    map<string, string> map = 2;
    enum Number {
        ZERO = 0;
        ONE = 1;
        TWO = 2;
    };
    message Row {
        string string_column = 1;
        uint32 integer_column = 2;
        uint64 long_column = 3;
        double double_column = 4;
        float float_column = 5;
        bool boolean_column = 6;
        Number number_column = 7;
        google.protobuf.Timestamp timestamp_column = 8;
        bytes bytes_column = 9;
    };
    Row row = 3;
    message NestedRow {
        repeated Row nested_list = 1;
        map<string, Row> nested_map = 2;
        Row row = 3;
    };
    NestedRow nested_row = 4;
}
